[project]
name = "puddingcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "fastapi>=0.127.1",
    "greenlet>=3.3.0",
    "pydantic[email]>=2.12.5",
    "sqlalchemy-utc>=0.14.0",
    "sqlmodel>=0.0.29",
    "uvicorn>=0.40.0",
]
